--- a/public/views/need.html
+++ b/public/views/need.html
@@ -2,4 +2,25 @@
 	<h1>Needs</h1>
 
 	<p>{{ tagline }}</p>
+	<table class="table" ng-init="loadCharges()">
+		<thead>
+		<th>Составляющая</th>
+		<th>Сумма</th>
+		<th>Дата</th>
+		<th>Место</th>
+		<th>Функции</th>
+		</thead>
+		<tbody>
+		<tr ng-repeat="charge in currentCharges">
+			<td>{{charge.name}}</td>
+			<td>{{charge.sum}}</td>
+			<td>{{charge.date | date : 'dd-MM-yyyy'}}</td>
+			<td>{{charge.reciever}}</td>
+			<td>
+				<button><span class="glyphicon glyphicon-edit"></span></button>
+				<button><span class="glyphicon glyphicon-remove"></span></button>
+			</td>
+		</tr>
+		</tbody>
+	</table>
 </div>
