--- a/public/views/need.html
+++ b/public/views/need.html
@@ -1,26 +1,70 @@
-<div class="jumbotron text-center">
-	<h1>Needs</h1>
+<div class="container">
+    <h1 class="page-header">Needs</h1>
+    <div class="table-responsive">
+        <table class="table table-striped" ng-init="loadCharges()">
+            <thead>
+            <th>Название</th>
+            <th>Сумма</th>
+            <th>Дата</th>
+            <th>Место</th>
+            <th>Функции</th>
+            </thead>
+            <tbody>
+            <tr ng-repeat="charge in currentCharges" ng-init="isEditable=false">
+                <td>
+                    <input type="text" class="form-control" ng-model="charge.name"/>
+                </td>
+                <td>
+                    <input type="number" class="form-control" ng-model="charge.sum"/>
+                </td>
+                <td>
+                    <input type="date" class="form-control" ng-model="charge.date" format-date/>
+                </td>
+                <td>
+                    <input type="text" class="form-control" ng-model="charge.reciever"/>
+                </td>
+                <td>
+                    <button type="button" class="btn btn-default">
+                        <span class="glyphicon glyphicon-ok" aria-hidden="true" ng-click="updateRow(charge)"></span>
+                    </button>
+                    <button type="button" class="btn btn-default" ng-click="deleteRow($index)">
+                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                    </button>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 
-	<p>{{ tagline }}</p>
-	<table class="table" ng-init="loadCharges()">
-		<thead>
-		<th>Составляющая</th>
-		<th>Сумма</th>
-		<th>Дата</th>
-		<th>Место</th>
-		<th>Функции</th>
-		</thead>
-		<tbody>
-		<tr ng-repeat="charge in currentCharges">
-			<td>{{charge.name}}</td>
-			<td>{{charge.sum}}</td>
-			<td>{{charge.date | date : 'dd-MM-yyyy'}}</td>
-			<td>{{charge.reciever}}</td>
-			<td>
-				<button><span class="glyphicon glyphicon-edit"></span></button>
-				<button><span class="glyphicon glyphicon-remove"></span></button>
-			</td>
-		</tr>
-		</tbody>
-	</table>
+    <form class="form-horizontal" role="form" ng-submit="insertRow()">
+        <div class="form-group">
+            <label class="col-md-2 control-label">Название</label>
+            <div class="col-md-4">
+                <input type="text" class="form-control" name="name" ng-model="title" />
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-md-2 control-label">Сумма</label>
+            <div class="col-md-4">
+                <input type="number" class="form-control" name="employees" ng-model="sum" />
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-md-2 control-label">Дата</label>
+            <div class="col-md-4">
+                <input type="date" class="form-control" name="headoffice" ng-model="date" placeholder="dd-MM-yyyy"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-md-2 control-label">Место</label>
+            <div class="col-md-4">
+                <input type="text" class="form-control" name="headoffice" ng-model="place" />
+            </div>
+        </div>
+        <div class="form-group">
+            <div style="padding-left:110px">
+                <input type="submit" value="Submit" class="btn btn-primary"/>
+            </div>
+        </div>
+    </form>
 </div>
