--- a/public/views/need.html
+++ b/public/views/need.html
@@ -1,5 +1,5 @@
-<div class="container"">
-    <h1 class="page-header">Needs</h1>
+<div class="container">
+    <h1 class="page-header">{{needDetailsName}}</h1>
     <!-- Button trigger modal -->
     <a class="btn btn-default" role="button" type="button" data-toggle="collapse"
             href="#chargeForm" aria-expanded="false" aria-controls="collapseExample">
